package.json modified

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-spa",
-  "homepage": "https://mikkomajamaa.github.io/react-spa",
+  "homepage": "https://mikkomajamaa.fi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
