--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
+    "react-responsive-navbar": "^1.0.11",
     "react-scripts": "1.1.4"
   },
   "scripts": {
