--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
+    "react-icons": "^3.0.5",
+    "react-mdl": "^1.11.0",
     "react-responsive-navbar": "^1.0.11",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "reactstrap": "^6.4.0",
+    "styled-components": "^3.4.2"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -19,5 +23,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
