--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^3.0.5",
     "react-mdl": "^1.11.0",
     "react-responsive-navbar": "^1.0.11",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "reactstrap": "^6.4.0",
     "styled-components": "^3.4.2"
