--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.0.5",
     "react-mdl": "^1.11.0",
     "react-responsive-navbar": "^1.0.11",
